--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.2.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -33,6 +33,16 @@ dependencies:
   uuid: ^2.1.0
   provider: ^4.1.3
   path: ^1.7.0
+  barcode_scan: ^3.0.1
+#  flutter_barcode_scanner: ^1.0.1
+  flutter_bloc: ^4.0.1
+  bloc: ^4.0.0
+  google_fonts: ^1.1.0
+  meta: ^1.1.8
+  equatable: ^1.2.0
+  font_awesome_flutter: ^8.8.1
+  rxdart: ^0.24.1
+  firebase_core: ^0.4.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -59,14 +69,14 @@ flutter:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
   assets:
-    - images/fanta01.jpg
-    - images/fanta02.jpg
-    - images/lay01.jpg
-    - images/lay02.jpg
-    - images/coke-zero01.jpg
-    - images/jabjai01.jpg
-    - images/oichi01.jpg
-    - images/pepsi01.jpg
+    - images/products/fanta01.jpg
+    - images/products/fanta02.jpg
+    - images/products/lay01.jpg
+    - images/products/lay02.jpg
+    - images/products/coke-zero01.jpg
+    - images/products/jabjai01.jpg
+    - images/products/oichi01.jpg
+    - images/products/pepsi01.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
